# Kumo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/kumo/: StreamWrapper.hpp
src/: StreamWrapper.cpp  main.cpp
